load("@rules_java//java:defs.bzl", "java_binary")
load("//tools/project:build_defs.bzl", "project")
load("//tools/workspace:junit5.bzl", "java_junit5_test")

project()

java_binary(
    name = "echobot-jvm",
    srcs = glob(["src/main/java/**/*.java"]),
    data = ["//jvm-toxcore-c:native"],
    jvm_flags = ["-Djava.library.path=jvm-toxcore-c"],
    main_class = "im.tox.echobot.EchoBot",
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//jvm-toxcore-api",
        "//jvm-toxcore-c",
        "@maven//:log4j_log4j",
        "@maven//:org_slf4j_slf4j_log4j12",
    ],
)

java_junit5_test(
    name = "echobot-jvm-test",
    size = "small",
    srcs = glob(["src/test/java/**/*.java"]),
    jvm_flags = ["-Djava.library.path=jvm-toxcore-c"],
    test_package = "im.tox.echobot",
    deps = [
        ":echobot-jvm",
        "//jvm-toxcore-api",
        "//jvm-toxcore-c",
    ],
)
